--- a/CNN_Model/requirements.txt
+++ b/CNN_Model/requirements.txt
@@ -1,90 +1,124 @@
-opencv-python==4.7.0.72
-opencv-python-headless==4.7.0.72
-streamlit==1.22.0
 absl-py==1.4.0
+altair==4.2.2
 appdirs==1.4.4
 astunparse==1.6.3
+attrs==23.1.0
 autograd==1.5
 autoray==0.6.3
+blinker==1.6.2
 cachetools==5.3.0
-certifi==2022.12.7
+certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
-contourpy==1.0.7
+click==8.1.3
 cryptography==40.0.2
-cycler==0.11.0
+decorator==5.1.1
 dill==0.3.6
-flatbuffers==23.5.8
-fonttools==4.39.3
+entrypoints==0.4
+filelock==3.12.0
+flatbuffers==1.12
+fsspec==2023.5.0
 future==0.18.3
 gast==0.4.0
-google-auth==2.17.3
-google-auth-oauthlib==1.0.0
+gensim==4.3.1
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==2.18.1
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.54.0
-h5py==3.8.0
+grpcio @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f0it_w9tlw/croot/grpc-suite_1681912595383/work
+h5py @ file:///Users/builder/miniconda3/envs/prefect/conda-bld/h5py_1637162753555/work
+huggingface-hub==0.14.1
 idna==3.4
-importlib-metadata==6.5.0
-importlib-resources==5.12.0
-jax==0.4.9
-keras==2.12.0
-kiwisolver==1.4.4
+importlib-metadata==6.6.0
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+keras==2.9.0
+Keras-Preprocessing==1.1.2
 libclang==16.0.0
 Markdown==3.4.3
+markdown-it-py==2.2.0
 MarkupSafe==2.1.2
-matplotlib==3.7.1
-ml-dtypes==0.1.0
+mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.1
+nltk==3.8.1
 ntlm-auth==1.5.0
-numpy==1.23.5
+numpy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ba5c3eaa-be93-4f42-ae24-fa720a3c6627m_sp7nbj/croots/recipe/numpy_and_numpy_base_1652801688716/work
 oauthlib==3.2.2
 opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 opt-einsum==3.3.0
 packaging==23.1
-pandas==2.0.0
+pandas==2.0.1
 pbr==5.11.1
-PennyLane==0.29.1
-PennyLane-Lightning==0.29.0
+pdfminer.six==20221105
+pdfplumber==0.9.0
+PennyLane==0.30.0
+PennyLane-Lightning==0.30.0
 Pillow==9.5.0
 ply==3.11
-protobuf==4.22.3
+protobuf==3.19.6
 psutil==5.9.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+pyarrow==12.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
-pyparsing==3.0.9
+pydeck==0.8.1b0
+Pygments==2.15.1
+Pympler==1.0.1
+pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2023.3
-qiskit==0.42.1
+PyYAML==6.0
+qiskit==0.43.0
 qiskit-aer==0.12.0
 qiskit-ibmq-provider==0.20.2
-qiskit-terra==0.23.3
-requests==2.28.2
+qiskit-terra==0.24.0
+regex==2023.5.5
+requests==2.30.0
 requests-ntlm==1.1.0
 requests-oauthlib==1.3.1
-retworkx==0.12.1
+rich==13.3.5
 rsa==4.9
 rustworkx==0.12.1
+scikit-learn==1.2.2
 scipy==1.10.1
 semantic-version==2.10.0
-six==1.16.0
-stevedore==5.0.0
-symengine==0.10.0
-sympy==1.11.1
-tensorboard==2.12.2
-tensorboard-data-server==0.7.0
+six==1.15.0
+sklearn==0.0.post5
+smart-open==6.3.0
+smmap==5.0.0
+stevedore==5.1.0
+streamlit==1.22.0
+symengine==0.9.2
+sympy==1.12
+tenacity==8.2.2
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
+tensorflow-estimator==2.9.0
+tensorflow-macos==2.9.0
+tensorflow-metal==0.5.0
 termcolor==2.3.0
+threadpoolctl==3.1.0
+tokenizers==0.13.3
 toml==0.10.2
+toolz==0.12.0
+torch==2.0.1
+tornado==6.3.2
+tqdm==4.65.0
+transformers==4.29.2
 typing_extensions==4.5.0
 tzdata==2023.3
+tzlocal==5.0.1
 urllib3==1.26.15
-websocket-client==1.5.1
-websockets==11.0.2
-Werkzeug==2.2.3
-wrapt==1.14.1
+validators==0.20.0
+Wand==0.6.11
+watchdog==3.0.0
+websocket-client==1.5.2
+websockets==11.0.3
+Werkzeug==2.3.4
+wrapt==1.15.0
 zipp==3.15.0
