--- a/CNN_Model/requirements.txt
+++ b/CNN_Model/requirements.txt
@@ -42,6 +42,7 @@ rustworkx==0.12.1
 scipy==1.10.1
 semantic-version==2.10.0
 six==1.16.0
+tensorflow
 tensorboard==2.12.2
 tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
