--- a/CNN_Model/requirements.txt
+++ b/CNN_Model/requirements.txt
@@ -23,6 +23,7 @@ networkx==3.1
 numpy==1.23.5
 oauthlib==3.2.2
 opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 packaging==23.1
 pandas==2.0.0
 PennyLane==0.29.1
