--- a/CNN_Model/requirements.txt
+++ b/CNN_Model/requirements.txt
@@ -22,8 +22,7 @@ matplotlib==3.7.1
 networkx==3.1
 numpy==1.23.5
 oauthlib==3.2.2
-opencv-python==4.7.0.72
-opencv-python-headless
+opencv-python-headless==4.5.4.60
 packaging==23.1
 pandas==2.0.0
 PennyLane==0.29.1
